ajout du footer

--- a/app/Resources/views/accueil/index.html.twig
+++ b/app/Resources/views/accueil/index.html.twig
@@ -21,4 +21,6 @@
         <img src="/app/Resources/views/accueil/AQUAHIPPIQUE.png" alt="">
 
     </div>
+
+    {% include 'footer.html.twig' %}
 {% endblock %}
