--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -15,6 +15,9 @@
                     <li class="nav-item {% if activeCompetition is defined %} active {% endif %}">
                         <a class="nav-link" href="/competition">Compétition</a>
                     </li>
+                    <li class="nav-item {% if activeResultat is defined %} active {% endif %}">
+                        <a class="nav-link" href="/resultats">Résultats</a>
+                    </li>
                     <li class="nav-item {% if activeContact is defined %} active {% endif %}">
                         <a class="nav-link" href="/contact">Contact</a>
                     </li>
