--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,9 @@
     </head>
     <body>
         <header>
-            {% block header %}{% endblock %}
+
+            {% block header %}    {% include 'header.html.twig' %}
+            {% endblock %}
         </header>
 
         {% block body %}{% endblock %}
