--- a/app/Resources/views/equipe/index.html.twig
+++ b/app/Resources/views/equipe/index.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Equipes list</h1>
+    <h1>Equipes list : </h1>
+    <br>
+    <br>
 
-    <table>
-        <thead>
+    <table class="table table-striped table-bordered table-sm">
+        <thead class="thead-dark">
             <tr>
                 <th>Id</th>
                 <th>Village</th>
