modification du chemin des images et ajout de la compétition avec les poneys dans la page compétition

--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -6,67 +6,67 @@
         <h1>Compétition : </h1>
 
         <div class="myProgress">
-            <div class="myBar1"><img src="Image/1.png"></div>
+            <div class="myBar1"><img src="{{ asset('images/1.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar2"><img src="Image/2.png"></div>
+            <div class="myBar2"><img src="{{ asset('images/2.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar3"><img src="Image/3.png"></div>
+            <div class="myBar3"><img src="{{ asset('images/3.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar4"><img src="Image/4.png"></div>
+            <div class="myBar4"><img src="{{ asset('images/4.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar5"><img src="Image/5.png"></div>
+            <div class="myBar5"><img src="{{ asset('images/5.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar6"><img src="Image/6.png"></div>
+            <div class="myBar6"><img src="{{ asset('images/6.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar7"><img src="Image/7.png"></div>
+            <div class="myBar7"><img src="{{ asset('images/7.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar8"><img src="Image/8.png"></div>
+            <div class="myBar8"><img src="{{ asset('images/8.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar9"><img src="Image/9.png"></div>
+            <div class="myBar9"><img src="{{ asset('images/9.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar10"><img src="Image/10.png"></div>
+            <div class="myBar10"><img src="{{ asset('images/10.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar11"><img src="Image/11.png"></div>
+            <div class="myBar11"><img src="{{ asset('images/11.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar12"><img src="Image/12.png"></div>
+            <div class="myBar12"><img src="{{ asset('images/12.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar13"><img src="Image/13.png"></div>
+            <div class="myBar13"><img src="{{ asset('images/13.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar14"><img src="Image/14.png"></div>
+            <div class="myBar14"><img src="{{ asset('images/14.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar15"><img src="Image/15.png"></div>
+            <div class="myBar15"><img src="{{ asset('images/15.png') }}"></div>
         </div>
         <hr>
         <div class="myProgress">
-            <div class="myBar16"><img src="Image/16.png"></div>
+            <div class="myBar16"><img src="{{ asset('images/16.png') }}"></div>
         </div>
 
 
