--- a/app/Resources/views/accueil/index.html.twig
+++ b/app/Resources/views/accueil/index.html.twig
@@ -7,6 +7,7 @@
     <div class="container">
 
         <div class="row">
+            <img src="" alt="Smiley face"
             <h1 class="offset-4">AquaHippique</h1>
             <p class="offset-3">Voici la plus grand compétition d'Aqua Poney du Bas-Rhin !</p>
         </div>
