ajout d'un background sur la page compétition

--- a/app/Resources/views/accueil/index.html.twig
+++ b/app/Resources/views/accueil/index.html.twig
@@ -3,10 +3,11 @@
 {% block body %}
 
     <div class="container">
-
-        <div class="row">
-            <h1 class="offset-4">AquaHippique</h1>
-            <p class="offset-3">Voici la plus grand compétition d'Aqua Poney du Bas-Rhin !</p>
+        <div class="">
+            <img class="offset-4" src="{{ asset('images/AQUAHIPPIQUE.png') }}" alt="">
+            <div class="row">
+                <p class="offset-3">Voici la plus grand compétition d'Aqua Poney du Bas-Rhin !</p>
+            </div>
         </div>
 
         <div class="row">
