--- a/app/Resources/views/equipes/index.html.twig
+++ b/app/Resources/views/equipes/index.html.twig
@@ -8,12 +8,30 @@
             <h1 class="offset-4">Équipes</h1>
         </div>
 
-        <div class="row">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto debitis deserunt dicta distinctio, dolor dolore doloribus earum laudantium molestiae quam qui quisquam reprehenderit rerum sint, ullam. Aspernatur error tempora veniam.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias at consequatur culpa debitis delectus deleniti impedit ipsam maxime nam necessitatibus nobis, perspiciatis, porro similique suscipit velit voluptate. Dicta, suscipit!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab cumque cupiditate eius eos id, iure magnam molestiae odit optio praesentium quam quia recusandae reiciendis soluta ullam, voluptate, voluptatem voluptates!
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores doloribus enim id libero officiis voluptas voluptatem. Aspernatur atque, blanditiis expedita fugiat iusto nobis numquam porro quaerat quis sunt vero!</p>
-        </div>
+        <h1>Equipes list : </h1>
+        <br>
+        <br>
+
+        <table class="table table-striped table-bordered table-sm">
+            <thead class="thead-dark">
+            <tr>
+                <th>Village</th>
+                <th>Poney</th>
+                <th>Cavalier</th>
+                <th>Image</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for equipe in equipes %}
+                <tr>
+                    <td>{{ equipe.village }}</td>
+                    <td>{{ equipe.poney }}</td>
+                    <td>{{ equipe.cavalier }}</td>
+                    <td><img src="{{ asset('images/'~equipe.image) }}" alt=""></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
     </div>
 
