suppression d'un titre qui faisait doublon dans équipes

--- a/app/Resources/views/equipes/index.html.twig
+++ b/app/Resources/views/equipes/index.html.twig
@@ -5,10 +5,8 @@
     <div class="container">
 
         <div class="row">
-            <h1 class="offset-4">Équipes</h1>
+            <h1 class="offset-4">Equipes list : </h1>
         </div>
-
-        <h1>Equipes list : </h1>
         <br>
         <br>
 
