--- a/app/Resources/views/accueil/index.html.twig
+++ b/app/Resources/views/accueil/index.html.twig
@@ -1,23 +1,63 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block body  %}
     <section id="accueil">
         <div class="container-fluid">
 
-            <br>
-            <div class="row">
-                <div class="col-xs-12">
-                    <img class="logo" src="{{ asset('images/AquaHippique.png') }}" alt="logo"/>
-
-                        <h1 class="titrePrincipal">LA première compétition de courses d’aqua poney !</h1>
-                        <img class="horse" src="http://res.cloudinary.com/tiffanym/image/upload/q_100/v1526571976/horse_xgaajl.png"
-                             alt="logo"/>
-                </div>
-            </div>
-
+            <img class="logo" src="{{ asset('images/AquaHippique.png') }}" alt="logo"/>
+            <h1 class="titrePrincipal">LA Première compétition de courses <br>d'aqua poney</h1>
+            <div class="background-image"></div>
 
         </div>
     </section>
 
+{% endblock %}
 
+{% block stylesheets %}
+<style>
+    /* Logo */
+    .logo {
+        margin: 0;
+        padding: 0;
+        pointer-events: none;
+        white-space: nowrap;
+        z-index: 9;
+        color: white;
+        position: absolute;
+        top: 60%;
+        width: 210px;
+        left: 18%;
+        transform: translate3d(-50%,-50%,0);
+    }
+
+    .background-image {
+        width: 110%;
+        height: 110%;
+        left: 0;
+        top: 0;
+        z-index: 0;
+        position: absolute;
+        background: url('http://res.cloudinary.com/tiffanym/image/upload/q_100/v1526571976/horse_xgaajl.png') no-repeat left center / cover;
+    }
+
+    .titrePrincipal {
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        pointer-events: none;
+        white-space: nowrap;
+        z-index: 9;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate3d(-50%,-50%,0);
+    }
+
+    html, body {
+        min-height: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+</style>
 {% endblock %}
