--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,23 @@
         </header>
 
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+
+        {% block javascripts %}
+<script>
+            const bg = document.querySelector('.background-image');
+            const windowWidth = window.innerWidth / 5;
+            const windowHeight = window.innerHeight / 5 ;
+
+            bg.addEventListener('mousemove', (e) => {
+            const mouseX = e.clientX / windowWidth;
+            const mouseY = e.clientY / windowHeight;
+
+            bg.style.transform = `translate3d(-${mouseX}%, -${mouseY}%, 0)`;
+            });
+</script>
+        {% endblock %}
+
 
         <footer>
             {% block footer %}{% endblock %}
