Ajustement page équipes

--- a/app/Resources/views/equipes/index.html.twig
+++ b/app/Resources/views/equipes/index.html.twig
@@ -25,7 +25,7 @@
                     <td>{{ equipe.village }}</td>
                     <td>{{ equipe.poney }}</td>
                     <td>{{ equipe.cavalier }}</td>
-                    <td><img src="{{ asset('images/'~equipe.image) }}" alt=""></td>
+                    <td><img style="width:100px" class="pony" src="{{ asset('images/'~equipe.image) }}" alt=""></td>
                 </tr>
             {% endfor %}
             </tbody>
