--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -3,7 +3,7 @@
 
     <footer class="jumbotron" style="height: 100px;">
 
-        <p class="footer">Site crée par Kévin avec un peu d'aide d'Hasan, de Tiffany, de Xavier et d'Aurélien (mais très peu)</p>
+        <p class="footer">Site crée par Kévin avec un peu (vraiment peu) d'aide d'Hasan, de Tiffany, de Xavier et d'Aurélien</p>
         <p></p>
 
     </footer>
