--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,11 +1,9 @@
 {% block header %}
 
 
-    <footer class="jumbotron" style="height: 100px;">
-
-        <p class="footer">Site crée par Kévin avec un peu d'aide d'Hasan, de Tiffany, de Xavier et d'Aurélien (mais très peu)</p>
-        <p></p>
-
+    <footer>
+        <img style="width: 140px; margin-top: 20px;" src="{{ asset('images/AquaHippique.png') }}" alt="logoFooter" />
+        <p>Site crée par Kévin avec un peu d'aide d'Hasan, de Tiffany, de Xavier et d'Aurélien (mais très peu)</p>
     </footer>
 
 
@@ -16,13 +14,12 @@
 
     <style>
 
-        .jumbotron{
-            background-color: darkslategray;
-            border-radius: 0px;
-        }
-
-        .footer{
-            color : white;
+        footer {
+            height : 80px;
+            text-align: center;
+            bottom: 0;
+            font-size: 12px;
+            background-color: #5e5e5e;
         }
 
     </style>
