--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,4 +1,3 @@
-{% block stylesheets %}<link rel="stylesheet" href="{{ asset('build/general.css') }}">{% endblock %}
 
 {% block header %}
 
@@ -25,5 +24,25 @@
             </div>
         </nav>
 
+
+{% endblock %}
+
+{% block stylesheets %}
+
+    <style>
+
+        .bg-dark {
+            background-color: #5dc2da !important;
+        }
+
+        a {
+            font-family: 'Bowlby One SC', cursive;
+        }
+
+        .navbar {
+            z-index : 10 !important;
+        }
+
+    </style>
 
 {% endblock %}
