mise à jour des polices

--- a/app/Resources/views/accueil/index.html.twig
+++ b/app/Resources/views/accueil/index.html.twig
@@ -43,6 +43,7 @@
     }
 
     .titrePrincipal {
+        font-family: 'Bowlby One SC', cursive;
         text-align: center;
         margin: 0;
         padding: 0;
