--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="fuck_you">
-        <h1>Compétition : </h1>
+        <h1 class="titrePrincipal">Compétition : </h1>
 
         <div class="myProgress">
             <div class="myBar1"><img src="images/1.png"></div>
@@ -113,6 +113,15 @@
 {% block stylesheets %}
 
     <style>
+
+        /*Titre*/
+
+        .titrePrincipal {
+            font-family: 'Bowlby One SC', cursive;
+            text-align: center;
+            margin-top: 20px;
+        }
+
         /* Reset */
         *,
         *::before,
