Wsh magl les chevaux court sa mere

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,9 +1,9 @@
 {% block header %}
 
 
-    <footer class="jumbotron" style="height: 100px;">
+    <footer class="jumbotron" style="">
 
-        <p class="footer">Site crée par Kévin avec un peu d'aide d'Hasan, de Tiffany, de Xavier et d'Aurélien (mais très peu)</p>
+        <p class="footer">Site crée par Hasan, Tiffany, Xavier, Aurélien avec un peu d'aide de Kevin (mais très peu)</p>
         <p></p>
 
     </footer>
@@ -19,9 +19,12 @@
         .jumbotron{
             background-color: darkslategray;
             border-radius: 0px;
+            height: 100px;
+            width: 100%;
         }
 
         .footer{
+            width: 100%;
             color : white;
         }
 
