--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -2,194 +2,391 @@
 
 {% block body %}
 
-    <div class="container">
-        <h1>Compétition : </h1>
+	<div class="container-fluid">
+		<h1>Compétition :
+		</h1>
 
-        <div class="myProgress">
-            <div class="myBar1"><img src="{{ asset('images/1.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar2"><img src="{{ asset('images/2.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar3"><img src="{{ asset('images/3.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar4"><img src="{{ asset('images/4.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar5"><img src="{{ asset('images/5.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar6"><img src="{{ asset('images/6.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar7"><img src="{{ asset('images/7.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar8"><img src="{{ asset('images/8.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar9"><img src="{{ asset('images/9.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar10"><img src="{{ asset('images/10.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar11"><img src="{{ asset('images/11.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar12"><img src="{{ asset('images/12.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar13"><img src="{{ asset('images/13.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar14"><img src="{{ asset('images/14.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar15"><img src="{{ asset('images/15.png') }}"></div>
-        </div>
-        <hr>
-        <div class="myProgress">
-            <div class="myBar16"><img src="{{ asset('images/16.png') }}"></div>
-        </div>
+		<div class="firstCourse">
+
+			<div class="myProgress">
+				<div class="myBar1"><img src="images/1.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar2"><img src="images/2.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar3"><img src="images/3.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar4"><img src="images/4.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar5"><img src="images/5.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar6"><img src="images/6.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar7"><img src="images/7.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar8"><img src="images/8.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar9"><img src="images/9.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar10"><img src="images/10.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar11"><img src="images/11.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar12"><img src="images/12.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar13"><img src="images/13.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar14"><img src="images/14.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar15"><img src="images/15.png"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar16"><img src="images/16.png"></div>
+			</div>
+
+		</div>
+
+		<div class="secondCourse">
+
+			<div class="myProgress">
+				<div class="myBar17"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar18"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar19"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar20"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar21"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar22"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar23"></div>
+			</div>
+			<hr>
+			<div class="myProgress">
+				<div class="myBar24"></div>
+			</div>
+
+		</div>
+		<div class="thirdCourse">
+			<div class="myProgress">
+				<div class="myBar25"><img src="images/8.png"></div>
+			</div>
+			<div class="myProgress">
+				<div class="myBar26"><img src="images/8.png"></div>
+			</div>
+			<div class="myProgress">
+				<div class="myBar27"><img src="images/8.png"></div>
+			</div>
+			<div class="myProgress">
+				<div class="myBar28"><img src="images/8.png"></div>
+			</div>
+			<div class="myProgress">
+				<div class="myBar29"><img src="images/8.png"></div>
+			</div>
+
+		</div>
+
+		<button onclick="start()">Run</button>
+
+	</div>
+	<!-- .container -->
+
+	<script>
+		var course = 0;
+		var gagnants = [];
+		var participants = [];
+
+		function start() {
+
+			if (course === 0) {
+				course += 1;
+				for (var i = 1; i <= 16; i++) {
+					move(".myBar".concat(i), i);
+				}
+			} else if (participants.length == 16 && course == 1) {
+				player = 0;
+				course += 1;
+				for (var i = 17; i <= 24; i++) {
+
+					move2(".myBar".concat(i), player);
+          player += 1
+				}
+			} else if (participants.length == 24 && course == 2) {
+				player = 9;
+				course += 1;
+				for (var i = 25; i <= 29; i++) {
+					move3(".myBar".concat(i), player);
+				}
+			}
 
 
-        <button onclick="start()">Run</button>
+		function move(ladiv, inc) {
+			var elem = document.querySelector(ladiv);
+			var width = 0;
+			var increment = inc;
 
-    </div>
-    <!-- .container -->
+			var id = setInterval(frame, 100);
+			function frame() {
+            console.log(gagnants);
+				if (participants.length == 15) {
+					idpar = 0;
 
-    <script>
-        function start() {
-            for (var i = 1; i <= 16; i++) {
-                move(".myBar".concat(i), i);
-            }
+					for (var i = 17; i <= 24; i++) {
+						document.querySelector(".myBar".concat(i)).innerHTML = "<img src='images/".concat(gagnants[idpar]).concat(".png'>")
+						idpar += 1;
+					}
+				}
+
+				if (width >= 100) {
+					if (gagnants.length < 8) {
+						gagnants.push(increment);
+					}
+
+					participants.push(increment);
+
+					clearInterval(id);
+				} else {
+					width += (Math.floor(Math.random() * 100) / 20);
+					elem.style.width = width + "%";
+				}
+			}
+
+		}
+
+    function move2(ladiv, inc) {
+      var elem = document.querySelector(ladiv);
+      var width = 0;
+      var increment = inc;
+      var id = setInterval(frame, 100);
+
+      function frame() {
+        console.log(gagnants);
+
+        if (participants.length == 23) {
+          idpar = 8;
+
+          for (var i = 25; i <= 29; i++) {
+            document.querySelector(".myBar".concat(i)).innerHTML = "<img src='images/".concat(gagnants[idpar]).concat(".png'>")
+            idpar += 1;
+          }
         }
-        function move(ladiv, inc) {
-            var elem = document.querySelector(ladiv);
-            var width = 0;
-            var increment = inc;
-            var id = setInterval(frame, 500);
-            function frame() {
-                console.log(elem);
-                if (width >= 100) {
-                    if (gagnants == null) {
-                        var gagnants = "1";
-                        console.log(gagnants);
-                    }
-                    clearInterval(id);
-                } else {
-                    console.log(elem);
-                    width += (Math.floor(Math.random() * 800)/ 500);
-                    elem.style.width = width + "%";
-                }
-            }
-        }
-    </script>
 
-    {% include 'footer.html.twig' %}
+        if (width >= 100) {
+          if (gagnants.length < 13) {
+            gagnants.push(gagnants[increment]);
+          }
+
+          participants.push(increment);
+
+          clearInterval(id);
+        } else {
+          width += (Math.floor(Math.random() * 100) / 20);
+          elem.style.width = width + "%";
+        }
+      }
+
+    }
+		function move3(ladiv, inc) {
+			var elem = document.querySelector(ladiv);
+			var width = 0;
+			var increment = inc;
+			var id = setInterval(frame, 100);
+			function frame() {
+
+				if (width >= 100) {
+
+					if (gagnants.length < 12) {
+						gagnants.push(gagnants[increment]);
+					}
+					participants.push(increment);
+					clearInterval(id);
+				} else {
+					width += (Math.floor(Math.random() * 100) / 20);
+					elem.style.width = width + "%";
+				}
+			}
+
+		}
+	}
+	</script>
+	<button onclick="myFunction()">Remove selected fruit</button>
+	<script>
+
+		function myFunction() {
+			var x = document.querySelector(".myBar1");
+			x.remove(x.selectedIndex);
+		}
+	</script>
 
 {% endblock %}
 
 {% block stylesheets %}
 
-    <style>
-        /* Reset */
-        *,
-        *::before,
-        *::after {
-            margin: 0;
-            padding: 0;
-            list-style-type: none;
-            line-height: 1.5em;
-            text-decoration: none;
-            box-sizing: border-box;
-        }
-        /* ^_^ */
-        body {
-            background-color: rgb(37, 73, 134);
-            margin-top: 10em;
-        }
-        .container {
-            max-width: 56em;
-            margin: 0 auto;
-            font-family: sans-serif;
-            padding: 0 1em;
-        }
-        h1 {
-            color: #ddd;
-            text-align: center;
-            margin: 1em 0 2em;
-        }
-        .myProgress {
-            width: 100%;
-        //	background-color: rgba(#dddddd, 0);
-        }
-        .myBar1,
-        .myBar2,
-        .myBar3,
-        .myBar4,
-        .myBar5,
-        .myBar6,
-        .myBar7,
-        .myBar8,
-        .myBar9,
-        .myBar10,
-        .myBar11,
-        .myBar12,
-        .myBar13,
-        .myBar14,
-        .myBar15,
-        .myBar16 {
-            width: 0%;
-            height: 1.5em;
-            margin-bottom: 2em;
-            background-color: rgba(#09c777, 0);
-            color: rgba(#254986, 0);
-            padding: 0.3em 0.5em;
-            font-size: 1.1em;
-            font-weight: bold;
-            text-align: right;
-            transition: 1000ms ease-out;
-        }
-        img {
-            height: 50px;
-        }
-        button {
-            position: relative;
-            padding: 0.3em 1em;
-            font-size: 1em;
-            font-weight: bold;
-            color: #eee;
-            background-color: #333;
-            border-radius: 2px;
-            border: none;
-        }
-        button:hover {
-            color: #eee;
-            background-color: #de3333;
-            cursor: pointer;
-            box-shadow: 0 5px 6px rgba(0, 0, 0, 0.4);
-        }
-        button:active {
-            top: -1px;
-        }
-    </style>
+	<style>
+		/* Reset */
+		*,
+		*::after,
+		*::before {
+			margin: 0;
+			padding: 0;
+			list-style-type: none;
+			line-height: 1.5em;
+			text-decoration: none;
+			box-sizing: border-box;
+		}
+		/* ^_^ */
+		body {
+			background-color: rgb(37, 73, 134);
+			margin-top: 10em;
+		}
+		.container {
+			max-width: 56em;
+			margin: 0 auto;
+			font-family: sans-serif;
+			padding: 0 1em;
+		}
+		h1 {
+			color: #ddd;
+			text-align: center;
+			margin: 1em 0 2em;
+		}
+		.myProgress {
+			width: 100%;
+			background-color: #dddddd;
+		}
+		.myBar1,
+		.myBar10,
+		.myBar11,
+		.myBar12,
+		.myBar13,
+		.myBar14,
+		.myBar15,
+		.myBar16,
+		.myBar17,
+		.myBar18,
+		.myBar19,
+		.myBar2,
+		.myBar20,
+		.myBar21,
+		.myBar22,
+		.myBar23,
+		.myBar24,
+		.myBar25,
+		.myBar26,
+		.myBar27,
+		.myBar28,
+		.myBar29,
+		.myBar3,
+		.myBar30,
+		.myBar31,
+		.myBar4,
+		.myBar5,
+		.myBar6,
+		.myBar7,
+		.myBar8,
+		.myBar9 {
+			width: 0;
+			height: 1em;
+			margin-bottom: 1.5em;
+			background-color: #00ff29;
+			color: rgba(#254986, 0);
+			padding: 0.3em 0.5em;
+			font-size: 1.1em;
+			font-weight: bold;
+			text-align: right;
+			transition: 100ms ease-out;
+		}
+		img {
+			height: 50px;
+		}
+		button {
+			position: relative;
+			padding: 0.3em 1em;
+			font-size: 1em;
+			font-weight: bold;
+			color: #eee;
+			background-color: #333;
+			border-radius: 2px;
+			border: none;
+		}
+		button:hover {
+			color: #eee;
+			background-color: #de3333;
+			cursor: pointer;
+			box-shadow: 0 5px 6px rgba(0, 0, 0, 0.4);
+		}
+		button:active {
+			top: -1px;
+		}
+
+		.firstCourse {
+			width: 30%;
+			float: left;
+		}
+
+		.secondCourse {
+			margin-top: 10%;
+			margin-left: 1%;
+			vertical-align: middle;
+			width: 30%;
+			float: left;
+		}
+		.thirdCourse {
+			margin-top: 10%;
+			margin-left: 1%;
+			vertical-align: middle;
+			width: 30%;
+			float: left;
+		}
+		.fourCourse {
+			margin-top: 10%;
+			margin-left: 1%;
+			vertical-align: middle;
+			width: 20%;
+			float: left;
+		}
+	</style>
 
 {% endblock %}
