--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -190,7 +190,7 @@
             text-align: right;
             transition: 1000ms ease-out;
         }
-        img {
+        div>img {
             height: 50px;
         }
         button {
