résolution de conflits

--- a/app/Resources/views/competition/index.html.twig
+++ b/app/Resources/views/competition/index.html.twig
@@ -291,6 +291,7 @@
 			color: #ddd;
 			text-align: center;
 			margin: 1em 0 2em;
+
 		}
 		.myProgress {
 			width: 100%;
@@ -338,7 +339,7 @@
 			text-align: right;
 			transition: 100ms ease-out;
 		}
-		img {
+		div>img {
 			height: 50px;
 		}
 		button {
