--- a/app/Resources/views/equipes/index.html.twig
+++ b/app/Resources/views/equipes/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
 
-            <h1 class="titrePrincipal">Equipes list : </h1>
+            <h1 class="titrePrincipal">Liste des équipes :</h1>
 
         <br>
         <br>
@@ -12,10 +12,10 @@
         <table class="table table-striped table-bordered table-sm">
             <thead class="thead-dark">
             <tr>
-                <th>Village</th>
-                <th>Poney</th>
-                <th>Cavalier</th>
-                <th>Image</th>
+                <th>VILLAGE</th>
+                <th>PONEY</th>
+                <th>CAVALIER</th>
+                <th>IMAGE</th>
             </tr>
             </thead>
             <tbody>
@@ -33,6 +33,7 @@
     </div>
 
     {% include 'footer.html.twig' %}
+
 {% endblock %}
 
 {% block stylesheets %}
@@ -44,6 +45,8 @@
             text-align: center;
             margin-top: 20px;
         }
+
+        tr { text-align: center; }
 
     </style>
 
