--- a/app/Resources/views/equipe/new.html.twig
+++ b/app/Resources/views/equipe/new.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Equipe creation</h1>
+    <h1>Ajout d'équipe</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Ajouter" />
     {{ form_end(form) }}
 
     <ul>
         <li>
-            <a href="{{ path('equipe_index') }}">Back to the list</a>
+            <a href="{{ path('equipe_index') }}">Retour à la liste</a>
         </li>
     </ul>
 {% endblock %}
