--- a/app/Resources/views/equipe/show.html.twig
+++ b/app/Resources/views/equipe/show.html.twig
@@ -25,6 +25,22 @@
                 <th>Image</th>
                 <td>{{ equipe.image }}</td>
             </tr>
+            <tr>
+                <th>Medailleor</th>
+                <td>{{ equipe.medailleOr }}</td>
+            </tr>
+            <tr>
+                <th>Medailleargent</th>
+                <td>{{ equipe.medailleArgent }}</td>
+            </tr>
+            <tr>
+                <th>Medaillebronze</th>
+                <td>{{ equipe.medailleBronze }}</td>
+            </tr>
+            <tr>
+                <th>Totalmedailles</th>
+                <td>{{ equipe.totalMedailles }}</td>
+            </tr>
         </tbody>
     </table>
 
