--- a/app/Resources/views/resultats/index.html.twig
+++ b/app/Resources/views/resultats/index.html.twig
@@ -2,22 +2,38 @@
 
 {% block body %}
 
-    <div class="container">
-        <h1 class="titrePrincipal">And the winner is...</h1>
-
-        <div class="row">
-            <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-        </div>
+    <div class="container-fluid">
+        <h1 class="titrePrincipal">Tableau des médailles</h1>
 
 
-    </div>
+    <table class="table table-striped table-bordered table-sm">
+        <thead class="thead-dark">
+        <tr>
+            <th>Village</th>
+            <th>Poney</th>
+            <th>Cavalier</th>
+            <th>Or</th>
+            <th>Argent</th>
+            <th>Bronze</th>
+            <th>Total</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for equipe in equipes %}
+            <tr>
+                <td>{{ equipe.village }}</td>
+                <td>{{ equipe.poney }} <img style="width:100px" class="pony" src="{{ asset('images/'~equipe.image) }}" alt=""></td>
+                <td>{{ equipe.cavalier }}</td>
+                <td>{{ equipe.medailleOr }}</td>
+                <td>{{ equipe.medailleArgent }}</td>
+                <td>{{ equipe.medailleBronze }}</td>
+                <td>{{ equipe.totalMedailles }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-        {% block javascripts %}
-            <script src="{{ asset('build/app.js') }}"></script>
-            <script src="https://code.highcharts.com/highcharts.src.js"></script>
-            <script src="http://code.highcharts.com/modules/exporting.js"></script>
-        {% endblock %}
-        {% include 'footer.html.twig' %}
+    {% include 'footer.html.twig' %}
 
 {% endblock %}
 
@@ -29,6 +45,10 @@
             font-family: 'Bowlby One SC', cursive;
             text-align: center;
             margin-top: 20px;
+        }
+
+        tr{
+        text-align: center;
         }
 
     </style>
