--- a/app/Resources/views/resultats/index.html.twig
+++ b/app/Resources/views/resultats/index.html.twig
@@ -5,29 +5,30 @@
     <div class="container-fluid">
         <h1 class="titrePrincipal">Tableau des médailles</h1>
 
+        <br>
 
     <table class="table table-striped table-bordered table-sm">
         <thead class="thead-dark">
         <tr>
-            <th>Village</th>
-            <th>Poney</th>
-            <th>Cavalier</th>
-            <th>Or</th>
-            <th>Argent</th>
-            <th>Bronze</th>
-            <th>Total</th>
+            <th style="vertical-align:middle">VILLAGE</th>
+            <th style="vertical-align:middle">PONEY</th>
+            <th style="vertical-align:middle">CAVALIER</th>
+            <th style="vertical-align:middle"><img style="width:60px" src="http://res.cloudinary.com/tiffanym/image/upload/q_100/v1526633517/first_ymlpka.png" alt=""></th>
+            <th style="vertical-align:middle"><img style="width:60px" src="http://res.cloudinary.com/tiffanym/image/upload/q_100/v1526633517/second_qcspma.png" alt=""></th>
+            <th style="vertical-align:middle"><img style="width:60px" src="http://res.cloudinary.com/tiffanym/image/upload/q_100/v1526633517/third_xcmjnv.png" alt=""></th>
+            <th style="vertical-align:middle">TOTAL</th>
         </tr>
         </thead>
         <tbody>
         {% for equipe in equipes %}
             <tr>
-                <td>{{ equipe.village }}</td>
-                <td>{{ equipe.poney }} <img style="width:100px" class="pony" src="{{ asset('images/'~equipe.image) }}" alt=""></td>
-                <td>{{ equipe.cavalier }}</td>
-                <td>{{ equipe.medailleOr }}</td>
-                <td>{{ equipe.medailleArgent }}</td>
-                <td>{{ equipe.medailleBronze }}</td>
-                <td>{{ equipe.totalMedailles }}</td>
+                <td style="vertical-align:middle">{{ equipe.village }}</td>
+                <td style="vertical-align:middle">{{ equipe.poney }} <img style="width:100px" class="pony" src="{{ asset('images/'~equipe.image) }}" alt=""></td>
+                <td style="vertical-align:middle">{{ equipe.cavalier }}</td>
+                <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleOr }}</td>
+                <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleArgent }}</td>
+                <td style="vertical-align:middle; width: 100px;">{{ equipe.medailleBronze }}</td>
+                <td style="vertical-align:middle; width: 100px;">{{ equipe.totalMedailles }}</td>
             </tr>
         {% endfor %}
         </tbody>
